<resources>
    <string name="app_name">Courage</string>
    <string name="todo">TODO</string>
    <string name="title_activity_after_splash">AfterSplash</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="first_tab_fragnent">First Tab Fragnent</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_fragment">Login Fragment</string>

    <!--    Custom Strings-->
    <string name="courage">
        Courage
    </string>
    <string name="total_activ">
        Total Active Users
    </string>
    <string name="users">
        25 Users
    </string>
    <string name="users_in_ra">
            Users in Range of 5 KM
    </string>
    <string name="location_ko">
        Location: Kotdwara
    </string>
    <string name="nearest_use">
        Nearest User/Contact to you:1.2km
    </string>
    <string name="contacts">Contacts
    </string>
    <string name="vivek_rawat">
        Vivek Rawat
    </string>
    <string name="contact_1">
        Contact-
    </string>
    <string name="verified">
        Verified
    </string>
    <string name="contact_name">
        Shailesh Kumar
    </string>
    <string name="contact_phone">
        8129412312
    </string>
    <string name="contact_email">
        shaileshrai@gmail.com
    </string>
    <string name="contact_address">
        Ranchi Jharkhand
    </string>
    <string name="edit">
        Edit
    </string>
    <string name="email">
        Email
    </string>
    <string name="gender">
        Gender
    </string>
    <string name="date_of_bir">
        Date Of Birth
    </string>
    <string name="address">
        Address
    </string>
    <string name="mobile_no_">
        Mobile No.
    </string>
    <string name="password">
        Password
    </string>
    <string name="title_activity_map">MapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="login">Login</string>
    <string name="create_new">Click here for register</string>
    <string name="not_register">Not Register?</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="title_activity_demo_map">DemoMap</string>

</resources>