<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/contact_detail_box">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        >
        <TextView
            android:id="@+id/contact_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="77dp"

            android:text="@string/contact_1"
            android:textAppearance="@style/contact_1"

            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_weight="2"
            >

            <TextView
                android:id="@+id/contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/contact_name"
                android:textAppearance="@style/contact_details" />
            <TextView
                android:id="@+id/contact_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:layout_marginTop="4dp"
                android:text="@string/contact_phone"
                android:textAppearance="@style/contact_details" />
            <TextView
                android:id="@+id/contact_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:layout_marginTop="4dp"
                android:text="@string/contact_email"
                android:textAppearance="@style/contact_details" />
            <TextView
                android:id="@+id/contact_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:layout_marginTop="4dp"
                android:text="@string/contact_address"
                android:textAppearance="@style/contact_details" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            >
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/verifiedButton"

            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_verified"
            /></LinearLayout>
    </LinearLayout>
</LinearLayout>