<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D1FFFFFF"
    tools:context=".ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_topbar"
        android:layout_gravity="center_horizontal"

        >

        <TextView
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="5dp"
            android:text="@string/edit"
            android:textAppearance="@style/edit" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_profile"
            android:id="@+id/profileImage"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_name"
            android:textAppearance="@style/profile_name"
            android:text="@string/vivek_rawat"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingLeft="29dp"
        >   
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAppearance="@style/profile_heading"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="rawatvivek239@gmail.com"
                android:textAppearance="@style/profile_detail"
                android:id="@+id/profile_email"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textAppearance="@style/profile_heading"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="male"
                android:textAppearance="@style/profile_detail"
                android:layout_marginTop="10dp"
                android:id="@+id/gender"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_bir"
                android:textAppearance="@style/profile_heading"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="09-03-2000"
                android:textAppearance="@style/profile_detail"
                android:id="@+id/profile_dob"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textAppearance="@style/profile_heading"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kotdwara, Uttarakhand"
                android:textAppearance="@style/profile_detail"
                android:layout_marginTop="10dp"
                android:id="@+id/profile_address"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_no_"
                android:textAppearance="@style/profile_heading"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8126279903"
                android:textAppearance="@style/profile_detail"
                android:id="@+id/profile_phone"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAppearance="@style/profile_heading"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Click here"
                android:textAppearance="@style/click_here"
                android:layout_marginTop="10dp"
                android:id="@+id/password_change"
                />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:orientation="horizontal"
        android:background="@color/white"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"

            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="40dp"
                    android:layout_height="43dp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                    android:background="@drawable/ic_location"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1"
                >

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="40dp"
                    android:layout_height="43dp"
                    android:id="@+id/nav_contact_button"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                    android:background="@drawable/ic_contact_icon" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="40dp"
                    android:layout_height="43dp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                    android:background="@drawable/ic_chat"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1"
                >

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="40dp"
                    android:layout_height="43dp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                    android:background="@drawable/ic_profile" />
            </LinearLayout>




        </LinearLayout>
    </RelativeLayout>
</LinearLayout>